# grimoire

./: .dockerignore  .env.example  .gitignore  .pnp.cjs  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  requirements.txt  seed_brave.sql  tsconfig.base.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
apps/api/: Dockerfile  alembic.ini  project.json  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: ea8a5178aa8b_initial_schema_with_all_word_models.py
apps/api/src/: main.py
apps/api/src/api/middleware/: error_handlers.py  rate_limit.py  request_id.py
apps/api/src/api/v1/endpoints/: words.py
apps/api/src/api/v1/models/: __init__.py  requests.py  responses.py
apps/api/src/core/: cache.py  config.py  database.py  logging.py
apps/api/src/models/: __init__.py  definition.py  grammar.py  learning_metadata.py  phonetic.py  related_word.py  usage_example.py  word.py
apps/api/src/repositories/: word_repository.py
apps/api/src/services/: cefr_adapter.py  claude_enrichment_adapter.py  cmu_phonetic_adapter.py  data_source_adapter.py  spelling_service.py
apps/api/tests/: conftest.py
apps/ui/: .gitignore  README.md  next.config.js  package.json  project.json  tsconfig.json
grimoire-ui/: .env.example
grimoire-ui/prisma/: schema.prisma
grimoire-ui/src/app/: error.tsx
grimoire-ui/src/components/: EditableField.tsx
grimoire-ui/src/hooks/: useVocabulary.ts  useWordLookup.ts
scripts/: backup_database.sh  load_common_words.py  validate-migration.sh
specs/001-an-ai-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-grimoire-ui-implement/: analysis-report.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.bak2
specs/003-convert-to-monorepo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/services/: __init__.py  enrichment_service.py  frequency_adapter.py  word_service.py  wordnet_adapter.py
tests/unit/: test_enrichment_service_us2.py
(+22 files in other folders)
